mona/antlr/gen/GramParser.py
# Generated from GramParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class GramParser ( Parser ):

    grammarFileName = "GramParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'var'", "'print'", "'println'", "'lenof'", 
                     "'copyof'", "'floorintof'", "'roundintof'", "'ceilintof'", 
                     "'sin'", "'spawn'", "'join'", "'while'", "'True'", 
                     "'False'", "'not'", "'and'", "'or'", "'decl'", "'ret'", 
                     "'if'", "'else'", "'='", "';'", "':'", "','", "'+'", 
                     "'-'", "'*'", "'**'", "'/'", "'<'", "'<='", "'>'", 
                     "'>='", "'=='", "'('", "')'", "'['", "']'", "'{'", 
                     "'}'" ]

    symbolicNames = [ "<INVALID>", "VAR", "PRINT", "PRINTLN", "LENOF", "COPYOF", 
                      "FLOORINTOF", "ROUNDINTOF", "CEILINTOF", "SIN", "SPAWN", 
                      "JOIN", "WHILE", "TRUE", "FALSE", "NOT", "AND", "OR", 
                      "DECL", "RET", "IF", "ELSE", "ASSIGN", "SEMI", "COLON", 
                      "COMMA", "PLUS", "MINUS", "TIMES", "POW", "DIV", "LESSTHAN", 
                      "LESSTHANOREQUAL", "GREATERTHAN", "GREATERTHANOREQUAL", 
                      "EQUALS", "LPAREN", "RPAREN", "LBRACK", "RBRACK", 
                      "LBRACE", "RBRACE", "IDEN", "INT", "FLOAT", "CHAR", 
                      "STRING", "LINE_COMMENT", "WS" ]

    RULE_program = 0
    RULE_stmt = 1
    RULE_assig_trgt = 2
    RULE_var_declr = 3
    RULE_if_block = 4
    RULE_if_stmt = 5
    RULE_elseif_stmt = 6
    RULE_else_stmt = 7
    RULE_func_decl = 8
    RULE_func_call_expr = 9
    RULE_while = 10
    RULE_assig = 11
    RULE_print = 12
    RULE_stmt_block = 13
    RULE_ret_stmt = 14
    RULE_expr = 15
    RULE_literal = 16
    RULE_lst_decl = 17
    RULE_param_lst = 18
    RULE_arg_lst = 19
    RULE_idx_access = 20

    ruleNames =  [ "program", "stmt", "assig_trgt", "var_declr", "if_block", 
                   "if_stmt", "elseif_stmt", "else_stmt", "func_decl", "func_call_expr", 
                   "while", "assig", "print", "stmt_block", "ret_stmt", 
                   "expr", "literal", "lst_decl", "param_lst", "arg_lst", 
                   "idx_access" ]

    EOF = Token.EOF
    VAR=1
    PRINT=2
    PRINTLN=3
    LENOF=4
    COPYOF=5
    FLOORINTOF=6
    ROUNDINTOF=7
    CEILINTOF=8
    SIN=9
    SPAWN=10
    JOIN=11
    WHILE=12
    TRUE=13
    FALSE=14
    NOT=15
    AND=16
    OR=17
    DECL=18
    RET=19
    IF=20
    ELSE=21
    ASSIGN=22
    SEMI=23
    COLON=24
    COMMA=25
    PLUS=26
    MINUS=27
    TIMES=28
    POW=29
    DIV=30
    LESSTHAN=31
    LESSTHANOREQUAL=32
    GREATERTHAN=33
    GREATERTHANOREQUAL=34
    EQUALS=35
    LPAREN=36
    RPAREN=37
    LBRACK=38
    RBRACK=39
    LBRACE=40
    RBRACE=41
    IDEN=42
    INT=43
    FLOAT=44
    CHAR=45
    STRING=46
    LINE_COMMENT=47
    WS=48

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GramParser.StmtContext)
            else:
                return self.getTypedRuleContext(GramParser.StmtContext,i)


        def EOF(self):
            return self.getToken(GramParser.EOF, 0)

        def getRuleIndex(self):
            return GramParser.RULE_program




    def program(self):

        localctx = GramParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 5497559457742) != 0):
                self.state = 42
                self.stmt()
                self.state = 47
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 49
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 48
                self.match(GramParser.EOF)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GramParser.RULE_stmt

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Stmt_if_blockContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GramParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def if_block(self):
            return self.getTypedRuleContext(GramParser.If_blockContext,0)



    class Stmt_stmt_blockContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GramParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def stmt_block(self):
            return self.getTypedRuleContext(GramParser.Stmt_blockContext,0)

        def SEMI(self):
            return self.getToken(GramParser.SEMI, 0)


    class Stmt_func_declContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GramParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def func_decl(self):
            return self.getTypedRuleContext(GramParser.Func_declContext,0)



    class Stmt_assigContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GramParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def assig(self):
            return self.getTypedRuleContext(GramParser.AssigContext,0)

        def SEMI(self):
            return self.getToken(GramParser.SEMI, 0)


    class Stmt_whileContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GramParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def while_(self):
            return self.getTypedRuleContext(GramParser.WhileContext,0)



    class Stmt_func_callContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GramParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def func_call_expr(self):
            return self.getTypedRuleContext(GramParser.Func_call_exprContext,0)

        def SEMI(self):
            return self.getToken(GramParser.SEMI, 0)


    class Stmt_printContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GramParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def print_(self):
            return self.getTypedRuleContext(GramParser.PrintContext,0)

        def SEMI(self):
            return self.getToken(GramParser.SEMI, 0)


    class Stmt_spawnContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GramParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def SPAWN(self):
            return self.getToken(GramParser.SPAWN, 0)
        def stmt_block(self):
            return self.getTypedRuleContext(GramParser.Stmt_blockContext,0)

        def SEMI(self):
            return self.getToken(GramParser.SEMI, 0)


    class Stmt_joinContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GramParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def JOIN(self):
            return self.getToken(GramParser.JOIN, 0)
        def SEMI(self):
            return self.getToken(GramParser.SEMI, 0)


    class Stmt_var_declrContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GramParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def var_declr(self):
            return self.getTypedRuleContext(GramParser.Var_declrContext,0)

        def SEMI(self):
            return self.getToken(GramParser.SEMI, 0)



    def stmt(self):

        localctx = GramParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stmt)
        try:
            self.state = 75
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = GramParser.Stmt_var_declrContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 51
                self.var_declr()
                self.state = 52
                self.match(GramParser.SEMI)
                pass

            elif la_ == 2:
                localctx = GramParser.Stmt_if_blockContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 54
                self.if_block()
                pass

            elif la_ == 3:
                localctx = GramParser.Stmt_func_declContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 55
                self.func_decl()
                pass

            elif la_ == 4:
                localctx = GramParser.Stmt_func_callContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 56
                self.func_call_expr()
                self.state = 57
                self.match(GramParser.SEMI)
                pass

            elif la_ == 5:
                localctx = GramParser.Stmt_whileContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 59
                self.while_()
                pass

            elif la_ == 6:
                localctx = GramParser.Stmt_assigContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 60
                self.assig()
                self.state = 61
                self.match(GramParser.SEMI)
                pass

            elif la_ == 7:
                localctx = GramParser.Stmt_printContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 63
                self.print_()
                self.state = 64
                self.match(GramParser.SEMI)
                pass

            elif la_ == 8:
                localctx = GramParser.Stmt_stmt_blockContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 66
                self.stmt_block()
                self.state = 67
                self.match(GramParser.SEMI)
                pass

            elif la_ == 9:
                localctx = GramParser.Stmt_spawnContext(self, localctx)
                self.enterOuterAlt(localctx, 9)
                self.state = 69
                self.match(GramParser.SPAWN)
                self.state = 70
                self.stmt_block()
                self.state = 71
                self.match(GramParser.SEMI)
                pass

            elif la_ == 10:
                localctx = GramParser.Stmt_joinContext(self, localctx)
                self.enterOuterAlt(localctx, 10)
                self.state = 73
                self.match(GramParser.JOIN)
                self.state = 74
                self.match(GramParser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assig_trgtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GramParser.RULE_assig_trgt

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Assig_trgt_exprContext(Assig_trgtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GramParser.Assig_trgtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(GramParser.ExprContext,0)



    class Assig_trgt_idenContext(Assig_trgtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GramParser.Assig_trgtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IDEN(self):
            return self.getToken(GramParser.IDEN, 0)



    def assig_trgt(self):

        localctx = GramParser.Assig_trgtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_assig_trgt)
        try:
            self.state = 79
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                localctx = GramParser.Assig_trgt_exprContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 77
                self.expr(0)
                pass

            elif la_ == 2:
                localctx = GramParser.Assig_trgt_idenContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 78
                self.match(GramParser.IDEN)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(GramParser.VAR, 0)

        def IDEN(self):
            return self.getToken(GramParser.IDEN, 0)

        def ASSIGN(self):
            return self.getToken(GramParser.ASSIGN, 0)

        def assig_trgt(self):
            return self.getTypedRuleContext(GramParser.Assig_trgtContext,0)


        def getRuleIndex(self):
            return GramParser.RULE_var_declr




    def var_declr(self):

        localctx = GramParser.Var_declrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_var_declr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(GramParser.VAR)
            self.state = 82
            self.match(GramParser.IDEN)
            self.state = 83
            self.match(GramParser.ASSIGN)
            self.state = 84
            self.assig_trgt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def if_stmt(self):
            return self.getTypedRuleContext(GramParser.If_stmtContext,0)


        def elseif_stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GramParser.Elseif_stmtContext)
            else:
                return self.getTypedRuleContext(GramParser.Elseif_stmtContext,i)


        def else_stmt(self):
            return self.getTypedRuleContext(GramParser.Else_stmtContext,0)


        def getRuleIndex(self):
            return GramParser.RULE_if_block




    def if_block(self):

        localctx = GramParser.If_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_if_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.if_stmt()
            self.state = 90
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 87
                    self.elseif_stmt() 
                self.state = 92
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==21:
                self.state = 93
                self.else_stmt()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(GramParser.IF, 0)

        def LPAREN(self):
            return self.getToken(GramParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(GramParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(GramParser.RPAREN, 0)

        def stmt_block(self):
            return self.getTypedRuleContext(GramParser.Stmt_blockContext,0)


        def getRuleIndex(self):
            return GramParser.RULE_if_stmt




    def if_stmt(self):

        localctx = GramParser.If_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_if_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(GramParser.IF)
            self.state = 97
            self.match(GramParser.LPAREN)
            self.state = 98
            self.expr(0)
            self.state = 99
            self.match(GramParser.RPAREN)
            self.state = 100
            self.stmt_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Elseif_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSE(self):
            return self.getToken(GramParser.ELSE, 0)

        def IF(self):
            return self.getToken(GramParser.IF, 0)

        def LPAREN(self):
            return self.getToken(GramParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(GramParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(GramParser.RPAREN, 0)

        def stmt_block(self):
            return self.getTypedRuleContext(GramParser.Stmt_blockContext,0)


        def getRuleIndex(self):
            return GramParser.RULE_elseif_stmt




    def elseif_stmt(self):

        localctx = GramParser.Elseif_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_elseif_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(GramParser.ELSE)
            self.state = 103
            self.match(GramParser.IF)
            self.state = 104
            self.match(GramParser.LPAREN)
            self.state = 105
            self.expr(0)
            self.state = 106
            self.match(GramParser.RPAREN)
            self.state = 107
            self.stmt_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Else_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSE(self):
            return self.getToken(GramParser.ELSE, 0)

        def stmt_block(self):
            return self.getTypedRuleContext(GramParser.Stmt_blockContext,0)


        def getRuleIndex(self):
            return GramParser.RULE_else_stmt




    def else_stmt(self):

        localctx = GramParser.Else_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_else_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(GramParser.ELSE)
            self.state = 110
            self.stmt_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DECL(self):
            return self.getToken(GramParser.DECL, 0)

        def IDEN(self):
            return self.getToken(GramParser.IDEN, 0)

        def param_lst(self):
            return self.getTypedRuleContext(GramParser.Param_lstContext,0)


        def stmt_block(self):
            return self.getTypedRuleContext(GramParser.Stmt_blockContext,0)


        def getRuleIndex(self):
            return GramParser.RULE_func_decl




    def func_decl(self):

        localctx = GramParser.Func_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_func_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(GramParser.DECL)
            self.state = 113
            self.match(GramParser.IDEN)
            self.state = 114
            self.param_lst()
            self.state = 115
            self.stmt_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_call_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GramParser.RULE_func_call_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Sin_callContext(Func_call_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GramParser.Func_call_exprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def SIN(self):
            return self.getToken(GramParser.SIN, 0)
        def arg_lst(self):
            return self.getTypedRuleContext(GramParser.Arg_lstContext,0)



    class Floor_callContext(Func_call_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GramParser.Func_call_exprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FLOORINTOF(self):
            return self.getToken(GramParser.FLOORINTOF, 0)
        def arg_lst(self):
            return self.getTypedRuleContext(GramParser.Arg_lstContext,0)



    class Ceil_callContext(Func_call_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GramParser.Func_call_exprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def CEILINTOF(self):
            return self.getToken(GramParser.CEILINTOF, 0)
        def arg_lst(self):
            return self.getTypedRuleContext(GramParser.Arg_lstContext,0)



    class Round_callContext(Func_call_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GramParser.Func_call_exprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ROUNDINTOF(self):
            return self.getToken(GramParser.ROUNDINTOF, 0)
        def arg_lst(self):
            return self.getTypedRuleContext(GramParser.Arg_lstContext,0)



    class Func_callContext(Func_call_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GramParser.Func_call_exprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IDEN(self):
            return self.getToken(GramParser.IDEN, 0)
        def arg_lst(self):
            return self.getTypedRuleContext(GramParser.Arg_lstContext,0)




    def func_call_expr(self):

        localctx = GramParser.Func_call_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_func_call_expr)
        try:
            self.state = 127
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [42]:
                localctx = GramParser.Func_callContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                self.match(GramParser.IDEN)
                self.state = 118
                self.arg_lst()
                pass
            elif token in [9]:
                localctx = GramParser.Sin_callContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 119
                self.match(GramParser.SIN)
                self.state = 120
                self.arg_lst()
                pass
            elif token in [6]:
                localctx = GramParser.Floor_callContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 121
                self.match(GramParser.FLOORINTOF)
                self.state = 122
                self.arg_lst()
                pass
            elif token in [7]:
                localctx = GramParser.Round_callContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 123
                self.match(GramParser.ROUNDINTOF)
                self.state = 124
                self.arg_lst()
                pass
            elif token in [8]:
                localctx = GramParser.Ceil_callContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 125
                self.match(GramParser.CEILINTOF)
                self.state = 126
                self.arg_lst()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(GramParser.WHILE, 0)

        def LPAREN(self):
            return self.getToken(GramParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(GramParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(GramParser.RPAREN, 0)

        def stmt_block(self):
            return self.getTypedRuleContext(GramParser.Stmt_blockContext,0)


        def getRuleIndex(self):
            return GramParser.RULE_while




    def while_(self):

        localctx = GramParser.WhileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_while)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(GramParser.WHILE)
            self.state = 130
            self.match(GramParser.LPAREN)
            self.state = 131
            self.expr(0)
            self.state = 132
            self.match(GramParser.RPAREN)
            self.state = 133
            self.stmt_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssigContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GramParser.RULE_assig

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Assign_accessContext(AssigContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GramParser.AssigContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IDEN(self):
            return self.getToken(GramParser.IDEN, 0)
        def LBRACK(self):
            return self.getToken(GramParser.LBRACK, 0)
        def expr(self):
            return self.getTypedRuleContext(GramParser.ExprContext,0)

        def RBRACK(self):
            return self.getToken(GramParser.RBRACK, 0)
        def ASSIGN(self):
            return self.getToken(GramParser.ASSIGN, 0)
        def assig_trgt(self):
            return self.getTypedRuleContext(GramParser.Assig_trgtContext,0)



    class Assign_idenContext(AssigContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a GramParser.AssigContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IDEN(self):
            return self.getToken(GramParser.IDEN, 0)
        def ASSIGN(self):
            return self.getToken(GramParser.ASSIGN, 0)
        def assig_trgt(self):
            return self.getTypedRuleContext(GramParser.Assig_trgtContext,0)




    def assig(self):

        localctx = GramParser.AssigContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_assig)
        try:
            self.state = 145
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                localctx = GramParser.Assign_accessContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 135
                self.match(GramParser.IDEN)
                self.state = 136
                self.match(GramParser.LBRACK)
                self.state = 137
                self.expr(0)
                self.state = 138
                self.match(GramParser.RBRACK)
                self.state = 139
                self.match(GramParser.ASSIGN)
                self.state = 140
                self.assig_trgt()
                pass

            elif la_ == 2:
                localctx = GramParser.Assign_idenContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 142
                self.match(GramParser.IDEN)
                self.state = 143
                self.match(GramParser.ASSIGN)
                self.state = 144
                self.assig_trgt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GramParser.RULE_print

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


